--- a/cleaning_animals10.ipynb
+++ b/cleaning_animals10.ipynb
@@ -88,7 +88,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [03:39<00:00, 21.97s/it]\n"
+      "  0%|          | 0/4863 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4863/4863 [00:36<00:00, 132.14it/s]\n",
+      "100%|██████████| 2623/2623 [00:20<00:00, 129.96it/s]\n",
+      "100%|██████████| 1446/1446 [00:15<00:00, 94.41it/s] \n",
+      "100%|██████████| 2112/2112 [00:20<00:00, 101.84it/s]\n",
+      "100%|██████████| 3098/3098 [00:24<00:00, 126.17it/s]\n",
+      "100%|██████████| 1668/1668 [00:38<00:00, 43.64it/s] \n",
+      "100%|██████████| 1866/1866 [00:14<00:00, 132.60it/s]\n",
+      "100%|██████████| 1820/1820 [00:19<00:00, 94.83it/s] \n",
+      "100%|██████████| 4821/4821 [00:25<00:00, 187.43it/s]\n",
+      "100%|██████████| 1862/1862 [00:09<00:00, 187.57it/s]\n"
      ]
     }
    ],
@@ -110,7 +126,7 @@
     "        targets_c = []\n",
     "        for idx in tqdm(df_animals10[df_animals10.label == i].index):\n",
     "            img_path = os.path.join(root, \"animals10/\", df_animals10.iloc[idx,0])\n",
-    "            image = io.imread(img_path)/255.0\n",
+    "            image = io.imread(img_path)\n",
     "            data_c.append(image)\n",
     "            targets_c.append(df_animals10.iloc[idx,1])\n",
     "\n",
@@ -141,21 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/26179 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 26179/26179 [00:00<00:00, 280341.31it/s]\n"
+      "100%|██████████| 26179/26179 [00:00<00:00, 149926.66it/s]\n"
      ]
     }
    ],
@@ -173,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +325,7 @@
        "[26179 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +354,7 @@
        "<Axes: xlabel='shape_x', ylabel='shape_y'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -373,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +391,7 @@
        "<Axes: xlabel='shape_x', ylabel='shape_y'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -417,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +581,7 @@
        "[23574 rows x 5 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +611,7 @@
        "<Axes: xlabel='shape_x', ylabel='shape_y'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -630,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +766,7 @@
        "<Axes: title={'center': 'shapes 160 to 300'}, xlabel='label'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -795,14 +804,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 23574/23574 [04:20<00:00, 90.50it/s] \n"
+      "  0%|          | 0/23574 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23574/23574 [05:44<00:00, 68.36it/s] \n"
      ]
     }
    ],
@@ -818,7 +834,7 @@
     "\n",
     "    data_160to300.append(image)\n",
     "\n",
-    "data_160to300 = np.array(data_160to300)"
+    "data_160to300 = np.array(data_160to300, dtype=np.uint8)"
    ]
   },
   {
@@ -830,14 +846,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:38<00:00,  9.85s/it]\n"
+      "100%|██████████| 10/10 [00:41<00:00,  4.17s/it]\n"
      ]
     }
    ],
@@ -865,12 +881,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_translate.to_csv(os.path.join(root, ds_name, \"translate.csv\"), index=False)\n",
-    "df_animals10_160to300[['index', 'image', 'label']].to_csv(os.path.join(root, ds_name, \"animals10_160to300.csv\"), index=False)"
+    "df_animals10_160to300[['index', 'image', 'label']].to_csv(os.path.join(root, ds_name, \"animals10.csv\"), index=False)"
    ]
   }
  ],
