compute mean and std of animals10_300x300

--- a/resizing_animals10.ipynb
+++ b/resizing_animals10.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,16 @@
     "import glob\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from torchvision import transforms, datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,6 +311,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Get Mean and Standard Deviation of the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = datasets.ImageFolder(root=root_new,\n",
+    "                                        transform=transforms.ToTensor())\n",
+    "\n",
+    "train_sampler = None\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "    train_dataset, batch_size=16, shuffle=(train_sampler is None),\n",
+    "    num_workers=16, pin_memory=True, sampler=train_sampler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/1637 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1637/1637 [01:25<00:00, 19.08it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean: tensor([0.3837, 0.3704, 0.3072]), std: tensor([0.3268, 0.3187, 0.3051])\n"
+     ]
+    }
+   ],
+   "source": [
+    "images_list = []\n",
+    "\n",
+    "for idx, (images, labels) in enumerate(tqdm(train_loader)):\n",
+    "    images_list.append(images)\n",
+    "\n",
+    "all_images = torch.cat(images_list, dim=0)\n",
+    "\n",
+    "mean = all_images.mean(dim=(0,2,3))\n",
+    "std = all_images.std(dim=(0,2,3))\n",
+    "\n",
+    "print(f\"mean: {mean}, std: {std}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train Test Split"
    ]
   },
@@ -321,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,23 +457,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reunite old tain-test split\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:01<00:00,  5.71it/s]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -420,12 +471,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:01<00:00,  6.32it/s]\n"
+      "100%|██████████| 10/10 [00:01<00:00,  5.79it/s]\n"
      ]
     }
    ],
    "source": [
     "train_test_split(seed=5645, root_train=root_new, test_frac=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:01<00:00,  5.61it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "unite_dataset(root_train=root_new, train_loc=\"train\", test_loc=\"test\", classes=classes)"
    ]
   }
  ],
