training supConHybrid and CE with diff 4000

--- a/resizing_animals10.ipynb
+++ b/resizing_animals10.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# root_new = \"./datasets/animals10_diff/-1/train/\"\n",
+    "root_new = \"./datasets/animals10_diff/4000/train/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,21 +341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1637/1637 [00:44<00:00, 37.12it/s]\n"
+      "100%|██████████| 1309/1309 [00:12<00:00, 105.41it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: tensor([0.3814, 0.3682, 0.3053]), std: tensor([0.3279, 0.3197, 0.3056])\n"
+      "mean: tensor([0.3869, 0.3732, 0.3088]), std: tensor([0.3273, 0.3186, 0.3039])\n"
      ]
     }
    ],
@@ -368,7 +378,8 @@
    "metadata": {},
    "source": [
     "- animals10_300x300: `mean: tensor([0.3837, 0.3704, 0.3072]), std: tensor([0.3268, 0.3187, 0.3051])`\n",
-    "- animals10_diff_-1: `mean: tensor([0.3814, 0.3682, 0.3053]), std: tensor([0.3279, 0.3197, 0.3056])`"
+    "- animals10_diff_-1: `mean: tensor([0.3816, 0.3683, 0.3052]), std: tensor([0.3281, 0.3198, 0.3055])`\n",
+    "- animals10_diff_4000: `mean: tensor([0.3869, 0.3732, 0.3088]), std: tensor([0.3273, 0.3186, 0.3039])`"
    ]
   },
   {
