util sup-folder

--- a/test_trainloader.ipynb
+++ b/test_trainloader.ipynb
@@ -9,9 +9,9 @@
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "from torchvision import transforms, datasets\n",
-    "from util import TwoCropTransform\n",
-    "from util_diff import DiffLoader, DiffTransform\n",
-    "from util_diff import SameTwoRandomResizedCrop, SameTwoColorJitter, SameTwoApply"
+    "from util.util import TwoCropTransform\n",
+    "from util.util_diff import DiffLoader, DiffTransform\n",
+    "from util.util_diff import SameTwoRandomResizedCrop, SameTwoColorJitter, SameTwoApply"
    ]
   },
   {
