--- a/validation.ipynb
+++ b/validation.ipynb
@@ -28,8 +28,8 @@
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "\n",
     "from networks.resnet_big import SupCEResNet, SupConResNet, LinearClassifier, model_dict\n",
-    "from util_logging import add_tsne_to_run_md, add_confusion_matrix_to_run_md, create_val_md\n",
-    "from util_pre_com_feat import featureEmbeddingDataset"
+    "from util.util_logging import add_tsne_to_run_md, add_confusion_matrix_to_run_md, create_val_md\n",
+    "from util.util_pre_com_feat import featureEmbeddingDataset"
    ]
   },
   {
@@ -950,8 +950,8 @@
     "import os\n",
     "import glob\n",
     "import re\n",
-    "from util_logging import create_training_plots, create_crossentropy_plots\n",
-    "from util_logging import add_train_to_run_md, add_class_CE_to_run_md"
+    "from util.util_logging import create_training_plots, create_crossentropy_plots\n",
+    "from util.util_logging import add_train_to_run_md, add_class_CE_to_run_md"
    ]
   },
   {
