--- a/validation_distances.ipynb
+++ b/validation_distances.ipynb
@@ -24,8 +24,8 @@
     "from tqdm import tqdm\n",
     "\n",
     "from networks.resnet_big import SupCEResNet, SupConResNet, model_dict\n",
-    "from util_diff import DiffLoader, DiffTransform\n",
-    "from util_diff import SameTwoRandomResizedCrop, SameTwoColorJitter, SameTwoApply\n",
+    "from util.util_diff import DiffLoader, DiffTransform\n",
+    "from util.util_diff import SameTwoRandomResizedCrop, SameTwoColorJitter, SameTwoApply\n",
     "\n",
     "seaborn.set_theme(style=\"darkgrid\")"
    ]
