--- a/resizing_animals10.ipynb
+++ b/resizing_animals10.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
+    "import shutil\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,17 +317,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "# root_new = \"./datasets/animals10_diff/-1/train/\"\n",
-    "root_new = \"./datasets/animals10_diff/4000/train/\""
+    "# root_new = \"./datasets/animals10_diff/4000/train/\"\n",
+    "\n",
+    "# root_new = \"./datasets/animals10_diff/-1/train_small/\"\n",
+    "root_new = \"./datasets/animals10_diff/4000/train_small/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,21 +345,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1309/1309 [00:12<00:00, 105.41it/s]\n"
+      "100%|██████████| 188/188 [00:02<00:00, 80.48it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: tensor([0.3869, 0.3732, 0.3088]), std: tensor([0.3273, 0.3186, 0.3039])\n"
+      "mean: tensor([0.3749, 0.3618, 0.2974]), std: tensor([0.3233, 0.3148, 0.2992])\n"
      ]
     }
    ],
@@ -379,7 +383,10 @@
    "source": [
     "- animals10_300x300: `mean: tensor([0.3837, 0.3704, 0.3072]), std: tensor([0.3268, 0.3187, 0.3051])`\n",
     "- animals10_diff_-1: `mean: tensor([0.3816, 0.3683, 0.3052]), std: tensor([0.3281, 0.3198, 0.3055])`\n",
-    "- animals10_diff_4000: `mean: tensor([0.3869, 0.3732, 0.3088]), std: tensor([0.3273, 0.3186, 0.3039])`"
+    "- animals10_diff_4000: `mean: tensor([0.3869, 0.3732, 0.3088]), std: tensor([0.3273, 0.3186, 0.3039])`\n",
+    "\n",
+    "- animals10_diff_-1_small: `mean: tensor([0.3708, 0.3579, 0.2948]), std: tensor([0.3253, 0.3171, 0.3019])`\n",
+    "- animals10_diff_4000_small: `mean: tensor([0.3749, 0.3618, 0.2974]), std: tensor([0.3233, 0.3148, 0.2992])`"
    ]
   },
   {
@@ -658,6 +665,118 @@
     "df_4000_test = create_files_dataFrame(root_4000_test, classes).sort_values(by=['label', 'image']).reset_index(drop=True)\n",
     "\n",
     "np.all((df_n1_test['image'] == df_4000_test['image']).values), np.count_nonzero(df_n1_test['image'] == df_4000_test['image']) / len(df_n1_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create smaller Trainings Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def copy_sample_images(root_data, root_small, classes, size_per_class=300, df_small=None):\n",
+    "\n",
+    "    if df_small is None:\n",
+    "        df_data = create_files_dataFrame(root_data, classes)\n",
+    "        df_small = df_data.groupby('label').sample(size_per_class)\n",
+    "\n",
+    "    for c in classes:\n",
+    "        os.makedirs(os.path.join(root_small, c), exist_ok=True)\n",
+    "\n",
+    "    for i in tqdm(df_small.index):\n",
+    "        img_name = df_small.loc[i]['image']\n",
+    "        img_class = classes[df_small.loc[i]['label']]\n",
+    "\n",
+    "        src = os.path.join(root_data, img_class, img_name)\n",
+    "        dst = os.path.join(root_small, img_class, img_name)\n",
+    "\n",
+    "        shutil.copy(src=src, dst=dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root_n1 = \"./datasets/animals10_diff/-1/train/\"\n",
+    "root_4000 = \"./datasets/animals10_diff/4000/train/\"\n",
+    "\n",
+    "root_n1_small = \"./datasets/animals10_diff/-1/train_small/\"\n",
+    "root_4000_small = \"./datasets/animals10_diff/4000/train_small/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_n1_train = create_files_dataFrame(root_n1, classes)\n",
+    "df_n1_train_small = df_n1_train.groupby('label').sample(300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3000/3000 [00:00<00:00, 3567.84it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "copy_sample_images(root_n1, root_n1_small, classes, df_small=df_n1_train_small)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3000/3000 [00:00<00:00, 4274.40it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "copy_sample_images(root_4000, root_4000_small, classes, df_small=df_n1_train_small)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, 1.0)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_n1_small = create_files_dataFrame(root_n1_small, classes).sort_values(by=['label', 'image']).reset_index(drop=True)\n",
+    "df_4000_small = create_files_dataFrame(root_4000_small, classes).sort_values(by=['label', 'image']).reset_index(drop=True)\n",
+    "\n",
+    "np.all((df_n1_small['image'] == df_4000_small['image']).values), np.count_nonzero(df_n1_small['image'] == df_4000_small['image']) / len(df_n1_small)"
    ]
   }
  ],
