texture transfer and shape bias validation

--- a/validation.ipynb
+++ b/validation.ipynb
@@ -73,7 +73,7 @@
     "if dataset_val_2:\n",
     "    train_loader_2, val_loader_2 = ut_val.set_dataloader(dataset_val_2, params, root_train_2, root_test_2)\n",
     "\n",
-    "model = ut_val.set_model(root_model, params, val_loader, cuda_device)"
+    "model = ut_val.set_model(root_model, params, len(val_loader.dataset.classes), cuda_device)"
    ]
   },
   {
