training CE city classification

--- a/resizing_animals10.ipynb
+++ b/resizing_animals10.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,12 +325,15 @@
     "# root_new = \"./datasets/animals10_diff/4000/train/\"\n",
     "\n",
     "# root_new = \"./datasets/animals10_diff/-1/train_small/\"\n",
-    "root_new = \"./datasets/animals10_diff/4000/train_small/\""
+    "# root_new = \"./datasets/animals10_diff/4000/train_small/\"\n",
+    "root_new = \"./datasets/animals10_diff/8000/train/\"\n",
+    "\n",
+    "# root_new = \"./datasets/city_classification/Original/train/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,21 +348,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 188/188 [00:02<00:00, 80.48it/s]\n"
+      "100%|██████████| 1309/1309 [00:21<00:00, 61.37it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: tensor([0.3749, 0.3618, 0.2974]), std: tensor([0.3233, 0.3148, 0.2992])\n"
+      "mean: tensor([0.3912, 0.3774, 0.3121]), std: tensor([0.3290, 0.3202, 0.3050])\n"
      ]
     }
    ],
@@ -384,9 +387,12 @@
     "- animals10_300x300: `mean: tensor([0.3837, 0.3704, 0.3072]), std: tensor([0.3268, 0.3187, 0.3051])`\n",
     "- animals10_diff_-1: `mean: tensor([0.3816, 0.3683, 0.3052]), std: tensor([0.3281, 0.3198, 0.3055])`\n",
     "- animals10_diff_4000: `mean: tensor([0.3869, 0.3732, 0.3088]), std: tensor([0.3273, 0.3186, 0.3039])`\n",
+    "- animals10_diff_8000 `mean: tensor([0.3912, 0.3774, 0.3121]), std: tensor([0.3290, 0.3202, 0.3050])`\n",
     "\n",
     "- animals10_diff_-1_small: `mean: tensor([0.3708, 0.3579, 0.2948]), std: tensor([0.3253, 0.3171, 0.3019])`\n",
-    "- animals10_diff_4000_small: `mean: tensor([0.3749, 0.3618, 0.2974]), std: tensor([0.3233, 0.3148, 0.2992])`"
+    "- animals10_diff_4000_small: `mean: tensor([0.3749, 0.3618, 0.2974]), std: tensor([0.3233, 0.3148, 0.2992])`\n",
+    "\n",
+    "- city_classification_original: `mean: tensor([0.1667, 0.1889, 0.1641]), std: tensor([0.1941, 0.2075, 0.1908])`"
    ]
   },
   {
@@ -405,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
