--- a/resizing_animals10.ipynb
+++ b/resizing_animals10.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,14 +326,15 @@
     "\n",
     "# root_new = \"./datasets/animals10_diff/-1/train_small/\"\n",
     "# root_new = \"./datasets/animals10_diff/4000/train_small/\"\n",
-    "root_new = \"./datasets/animals10_diff/8000/train/\"\n",
+    "# root_new = \"./datasets/animals10_diff/8000/train/\"\n",
     "\n",
-    "# root_new = \"./datasets/city_classification/Original/train/\""
+    "# root_new = \"./datasets/city_classification/Original/train/\"\n",
+    "root_new = \"./datasets/city_classification/EEDv2_5792_as_Original5/train/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,21 +349,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1309/1309 [00:21<00:00, 61.37it/s]\n"
+      "100%|██████████| 864/864 [00:22<00:00, 38.04it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean: tensor([0.3912, 0.3774, 0.3121]), std: tensor([0.3290, 0.3202, 0.3050])\n"
+      "mean: tensor([0.1471, 0.1704, 0.1445]), std: tensor([0.1896, 0.2021, 0.1862])\n"
      ]
     }
    ],
@@ -392,7 +393,8 @@
     "- animals10_diff_-1_small: `mean: tensor([0.3708, 0.3579, 0.2948]), std: tensor([0.3253, 0.3171, 0.3019])`\n",
     "- animals10_diff_4000_small: `mean: tensor([0.3749, 0.3618, 0.2974]), std: tensor([0.3233, 0.3148, 0.2992])`\n",
     "\n",
-    "- city_classification_original: `mean: tensor([0.1667, 0.1889, 0.1641]), std: tensor([0.1941, 0.2075, 0.1908])`"
+    "- city_classification_original: `mean: tensor([0.1667, 0.1889, 0.1641]), std: tensor([0.1941, 0.2075, 0.1908])`\n",
+    "- city_classification_diff: `mean: tensor([0.1471, 0.1704, 0.1445]), std: tensor([0.1896, 0.2021, 0.1862])`"
    ]
   },
   {
@@ -783,6 +785,40 @@
     "df_4000_small = create_files_dataFrame(root_4000_small, classes).sort_values(by=['label', 'image']).reset_index(drop=True)\n",
     "\n",
     "np.all((df_n1_small['image'] == df_4000_small['image']).values), np.count_nonzero(df_n1_small['image'] == df_4000_small['image']) / len(df_n1_small)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, 1.0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_city = \"./datasets/city_classification/Original/val/\"\n",
+    "root_cityDiff = \"./datasets/city_classification/EEDv2_5792_as_Original5/val/\"\n",
+    "classes = [x[:-1].replace(root_city, '') for x in glob.glob(os.path.join(root_city, \"*/\"))]\n",
+    "\n",
+    "df_city = create_files_dataFrame(root_city, classes).sort_values(by=['label', 'image']).reset_index(drop=True)\n",
+    "df_cityDiff = create_files_dataFrame(root_cityDiff, classes).sort_values(by=['label', 'image']).reset_index(drop=True)\n",
+    "\n",
+    "np.all((df_city['image'] == df_cityDiff['image']).values), np.count_nonzero(df_city['image'] == df_cityDiff['image']) / len(df_city)"
    ]
   }
  ],
