supCon factor loss and first training

--- a/test_loss.ipynb
+++ b/test_loss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,17 +78,13 @@
     "        else:\n",
     "            raise ValueError('Unknown mode: {}'.format(self.contrast_mode))\n",
     "        \n",
-    "\n",
-    "        \n",
-    "\n",
     "        # compute logits\n",
     "        anchor_dot_contrast = torch.div(\n",
     "            torch.matmul(anchor_feature, contrast_feature.T),\n",
     "            self.temperature)\n",
     "        # # for numerical stability\n",
-    "        # logits_max, _ = torch.max(anchor_dot_contrast, dim=1, keepdim=True)\n",
-    "        # logits = anchor_dot_contrast - logits_max.detach()\n",
-    "        logits = anchor_dot_contrast\n",
+    "        logits_max, _ = torch.max(anchor_dot_contrast, dim=1, keepdim=True)\n",
+    "        logits = anchor_dot_contrast - logits_max.detach()\n",
     "\n",
     "        # tile mask\n",
     "        mask = mask.repeat(anchor_count, contrast_count)\n",
@@ -101,22 +97,6 @@
     "        )\n",
     "        mask = mask * logits_mask\n",
     "\n",
-    "\n",
-    "\n",
-    "        # negative_mask = (torch.ones_like(mask)-mask) * logits_mask\n",
-    "\n",
-    "        mask_alpha_2 = (alpha * torch.ones((batch_size,batch_size), dtype=torch.float32)).fill_diagonal_(1.0).to(device).repeat(anchor_count, contrast_count).fill_diagonal_(alpha)\n",
-    "        mask_alpha_3 = torch.ones((batch_size,batch_size), dtype=torch.float32).fill_diagonal_(alpha).to(device).repeat(anchor_count, contrast_count).fill_diagonal_(1.0)\n",
-    "        \n",
-    "        # negative_mask for all features vectors with different labels\n",
-    "        negative_mask = (torch.ones_like(mask)-mask) * logits_mask\n",
-    "        # mask for the related feature vectors (use as positives)\n",
-    "        mask_related = torch.eye(batch_size, dtype=torch.float32).to(device).repeat(anchor_count, contrast_count) * logits_mask\n",
-    "\n",
-    "        mask_alpha = (alpha * (mask - mask_related) + negative_mask + mask_related).fill_diagonal_(1.0)\n",
-    "\n",
-    "\n",
-    "\n",
     "        if hybrid and labels is not None:\n",
     "            # negative_mask for all features vectors with different labels\n",
     "            negative_mask = (torch.ones_like(mask)-mask) * logits_mask\n",
@@ -125,50 +105,16 @@
     "            # logits_mask for used positives and negatives combined\n",
     "            logits_mask = logits_mask + negative_mask\n",
     "\n",
-    "\n",
-    "\n",
-    "        # logits_mask = mask + negative_mask\n",
-    "\n",
-    "\n",
-    "        # print(\"mask alpha\")\n",
-    "        # print(mask_alpha)\n",
-    "        \n",
-    "\n",
-    "        # print(\"logits\")\n",
-    "        # print(logits)\n",
-    "\n",
-    "        # print(\"positives mask\")\n",
-    "        # print(mask)\n",
-    "\n",
-    "        # print(\"positives+negatives mask\")\n",
-    "        # print(logits_mask)\n",
-    "            \n",
-    "        # print(((mask * mask_alpha) != 0.0).sum(1))\n",
-    "            \n",
-    "        \n",
-    "\n",
     "        # compute log_prob\n",
     "        exp_logits = torch.exp(logits) * logits_mask\n",
-    "        # exp_logits = torch.exp(logits) * logits_mask * mask_alpha\n",
-    "        # exp_logits = torch.exp(logits) * logits_mask * mask_alpha_3\n",
     "        log_prob = logits - torch.log(exp_logits.sum(1, keepdim=True))\n",
-    "        # log_prob = torch.log(torch.exp(logits) * mask_alpha) - torch.log(exp_logits.sum(1, keepdim=True))\n",
-    "        # log_prob = torch.log(torch.exp(logits) * mask_alpha_3) - torch.log(exp_logits.sum(1, keepdim=True))\n",
-    "\n",
-    "        # print(\"log_prob\")\n",
-    "        # print(mask * mask_alpha_3 * log_prob)\n",
-    "\n",
-    "        # print(\"exp_logits\")\n",
-    "        # print(torch.log(exp_logits.sum(1, keepdim=True)))\n",
     "\n",
     "        # compute mean of log-likelihood over positive\n",
-    "        # mean_log_prob_pos = (mask * log_prob).sum(1) / mask.sum(1)\n",
-    "        # mean_log_prob_pos = (mask * mask_alpha * log_prob).sum(1) / ((mask * mask_alpha) != 0.0).sum(1)\n",
-    "        # mean_log_prob_pos = (mask * mask_alpha_3 * log_prob).sum(1) / mask.sum(1)\n",
-    "\n",
-    "        mean_log_prob_pos = (mask * mask_alpha_3 * log_prob).sum(1) / (mask * mask_alpha_3).sum(1)\n",
-    "\n",
-    "        # print(mean_log_prob_pos)\n",
+    "        if alpha == 1.0:\n",
+    "            mean_log_prob_pos = (mask * log_prob).sum(1) / mask.sum(1)\n",
+    "        else:\n",
+    "            mask_alpha = torch.ones((batch_size,batch_size), dtype=torch.float32).fill_diagonal_(alpha).to(device).repeat(anchor_count, contrast_count).fill_diagonal_(1.0)\n",
+    "            mean_log_prob_pos = (mask * mask_alpha * log_prob).sum(1) / (mask * mask_alpha).sum(1)\n",
     "\n",
     "        # loss\n",
     "        loss = - (self.temperature / self.base_temperature) * mean_log_prob_pos\n",
@@ -179,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -187,9 +133,9 @@
      "output_type": "stream",
      "text": [
       "[SupCon] loss: 1.5695327520370483 loss_alpha 1.5695327520370483\n",
-      "[SupCon] loss: 1.6082594394683838 loss_alpha 1.5294352769851685\n",
-      "[SupCon] loss: 1.6082594394683838 loss_alpha 1.6476714611053467\n",
-      "1.0 | 0.9282404184341431\n"
+      "[SupCon] loss: 1.7651050090789795 loss_alpha 1.3671231269836426\n",
+      "[SupCon] loss: 1.7651050090789795 loss_alpha 1.964096188545227\n",
+      "1.0 | 0.696057140827179\n"
      ]
     }
    ],
@@ -197,11 +143,9 @@
     "# alpha=5 opt eps is around 0.6099\n",
     "# alpha=10 opt eps is around 0.7362\n",
     "# alpha=2 opt eps is around 0.3832\n",
-    "eps = 0.3832\n",
+    "eps = 0.6099\n",
     "\n",
-    "alpha = 2\n",
-    "n_samples = 26\n",
-    "n_features = 2\n",
+    "alpha = 5\n",
     "\n",
     "cuda_device = 0\n",
     "criterion = SupConLoss(temperature=0.1, contrast_mode=\"one\")\n",
@@ -251,86 +195,6 @@
     "    loss_alpha_2 = criterion(features, labels, alpha=alpha, hybrid=False)\n",
     "    print(f\"[SupCon] loss: {loss_2} loss_alpha {loss_alpha_2}\")\n",
     "    print(f\"{loss_1/loss_2} | {loss_alpha_1/loss_alpha_2}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-1.0987)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.tensor([-0.0000, -1.0987, -0.0000, -0.0000, -1.0987, -1.0987, -0.0000, -0.0000]).sum() / 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-2.5636)"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.tensor([-0.0000, -1.0987, -0.0000, -0.0000, -5.4934, -1.0987, -0.0000, -0.0000]).sum() / 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-1.2321)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.tensor([-0.0000, -1.5840, -0.0000, -0.0000, -0.5283, -1.5840, -0.0000, -0.0000]).sum() / 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(-1.9365)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.tensor([-0.0000, -1.5840, -0.0000, -0.0000, -2.6415, -1.5840, -0.0000, -0.0000]).sum() / 3"
    ]
   },
   {
